--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+private.txt
 # compiled output
 /dist
 /dist-server
@@ -41,3 +41,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+private.txt
